# hemline

./: .gitignore  .replit  CITATION.cff  README.md  pyproject.toml  requirements.txt
data/: designers.csv  frames.json  scrape_targets.csv
frontend/: index.html  map.js  styles.css
scripts/: scrape_runway.py  seed_synthetic.py
src/common/: schemas.py
src/serving/: app.py  store.py
